fixed horizontal scroll bar issues

--- a/css/index.css
+++ b/css/index.css
@@ -49,15 +49,15 @@ table {
 
 * {
     box-sizing: border-box;
+
 }
 
 html {
-    max-width: 1920px;
-    min-width: 428px;
     width: 100%;
     font-size: 62.5%;
     margin: 0 auto;
     background-color: black;
+    
 }
 
 body {
@@ -156,14 +156,20 @@ nav div i {
 }
 
 /* gallery section */
+
+section.gallery {
+    max-width: 100%;
+}
 .gallery {
     display: flex;
     flex-direction: column;
+    justify-content: center;
+    align-items: center;
     width: 100%;
     text-align: center;
     background-color: rgb(0, 4, 17);
     color: white;
-    align-items: center;
+  
    
    
 }
@@ -174,19 +180,19 @@ nav div i {
 }
 
 .gallery div {
-    justify-content: space-around;
-    margin: 0 auto;
     display: flex;
+    justify-content: space-around;
+    align-items: center;
+    gap: 2rem 2rem;
     flex-direction: row;
     flex-wrap: wrap;
-    gap:2rem 2rem;
-   
+    margin: 0 auto;
+    width: 80%;
 
 }
 
 .gallery img {
-    min-width: 20%;
-    
+    max-width: 100%;
     
 }
 
@@ -196,7 +202,7 @@ nav div i {
 .about {
     position: relative;
     width: 100%;
-    height: 75vh;
+    
     text-align: center;
     background-image: url("../img/staff-cooks.jpg");
     background-size: 100%;
@@ -300,6 +306,7 @@ footer {
     display: flex;
     flex-direction: row;
     justify-content: center;
+    flex-wrap: nowrap;
 }
 .email-sign-up button {
     width: 14rem;
